--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,7 +66,8 @@ padding: 10px;
 	height: 50px;
 	background-color: white;
 	border:none;
-	font-size: 40px;
+	padding-left: 10px;
+	font-size: 35px;
 	color:black;
 	border-bottom: 3px solid black;
 	display:block;
