--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -85,14 +85,16 @@ color: #02ADFF;
 {
 	display: block;
 	margin: 15px auto 0px auto;
-	width: 400px;
+	/*width: 400px;
+	height: 225px;*/
+	width: 225px;
 	height: 225px;
 	/*padding:5px;*/
 	}
 
 #image:hover
 {
-	opacity: .85;
+	opacity: .75;
 	/*
 	-webkit-box-shadow: 0px 0px 5px 0px #777;
 	-moz-box-shadow:    0px 0px 5px 0px #777;
