--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,7 +61,8 @@ padding: 10px;
 }
 
 #textBox
-{	
+{
+text-align:center;		
 	width: 400px;
 	height: 50px;
 	background-color: white;
@@ -131,4 +132,34 @@ padding: 10px;
 	display:block;
 	height: 100%;
 
+}
+
+#divMenu
+{
+	width: 100%;
+	margin :0px auto 0px auto;
+	background-color:#FFFF2B;
+	height:40px;
+}
+#ulMenu
+{
+	width:70%;
+	margin:0px auto 0px auto;
+}
+#liMenuItem
+{
+	width: 25%;
+	height:30px;
+	background-color:#FFFF2B;
+	float:left;
+	text-align:center;
+	font-size: 20px;
+	padding-top: 10px;
+}
+#liMenuItem:hover
+{
+	background-color: white;
+	color:black;
+	font-weight:bold;
 	}
+
