--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -95,13 +95,11 @@ text-align:center;
 
 #logo
 {
-	width: 200px;
-	height: 200px;
+	width: 150px;
+	height: 150px;
 	display:block;
-	position:absolute;
-	top: 0;
-	left:100;
-	}
+	margin: 0 auto 0 auto;
+}
 
 #logo:hover
 {
@@ -120,7 +118,7 @@ text-align:center;
 {
 	width:400px;
 	height: 65px;
-	margin: 0px auto 0px auto;
+	margin: 10px auto 0px auto;
 	border-top: 3px solid black;
 	display:none;
 	visibility:hidden;
@@ -138,7 +136,7 @@ text-align:center;
 {
 	width: 100%;
 	margin :0px auto 0px auto;
-	background-color:#FFFF2B;
+	/*background-color:#FFFF2B;*/
 	height:40px;
 }
 #ulMenu
@@ -148,18 +146,31 @@ text-align:center;
 }
 #liMenuItem
 {
-	width: 25%;
+	width: 23%;
 	height:30px;
-	background-color:#FFFF2B;
+	background-color:#000000;
 	float:left;
 	text-align:center;
 	font-size: 20px;
 	padding-top: 10px;
+	margin:1%;
+	color:white;
 }
 #liMenuItem:hover
 {
-	background-color: white;
-	color:black;
+	cursor: hand;
+	background-color: #ff0000;
+}
+
+#liMenuItem:active
+{
 	font-weight:bold;
-	}
+	
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
