--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -103,6 +103,8 @@ text-align:center;
 
 #logo:hover
 {
+	opacity: 0.85;
+
 	/*
 	-webkit-box-shadow: 0px 0px 5px 0px #777;
 	-moz-box-shadow:    0px 0px 5px 0px #777;
