--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,8 +8,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -52,7 +52,7 @@ table {
 	height: 50px;
 	font-size: 25px;
 	background-color:black;
-	
+
 }
 
 #divLogin
@@ -62,7 +62,7 @@ padding: 10px;
 
 #textBox
 {
-text-align:center;		
+text-align:center;
 	width: 400px;
 	height: 50px;
 	background-color: white;
@@ -74,7 +74,7 @@ text-align:center;
 	display:block;
 	margin: 0px auto 0px auto;
 	font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-	
+
 }
 #textBox:focus
 {
@@ -86,7 +86,7 @@ text-align:center;
 
 #divPlayer
 {
-	width: 400px;	
+	width: 400px;
 	height: 200px;
 	margin: 0px auto 0px auto;
 	position:relative;
@@ -99,21 +99,17 @@ text-align:center;
 	height: 150px;
 	display:block;
 	margin: 0 auto 0 auto;
+	opacity: 0.5;
+	transition: all .6s linear;
 }
 
 #logo:hover
 {
-	opacity: 0.85;
-
-	/*
-	-webkit-box-shadow: 0px 0px 5px 0px #777;
-	-moz-box-shadow:    0px 0px 5px 0px #777;
-	box-shadow:         0px 0px 5px 0px #777;*/
-
+	transform: rotate(360deg) scale(.3);
 }
 
 #equalizer
-{	
+{
 }
 
 #divPlayerTools
@@ -121,7 +117,7 @@ text-align:center;
 	width:400px;
 	height: 65px;
 	margin: 10px auto 0px auto;
-	border-top: 3px solid black;
+	border-top: 1px solid black;
 	display:none;
 	visibility:hidden;
 }
@@ -167,7 +163,7 @@ text-align:center;
 #liMenuItem:active
 {
 	font-weight:bold;
-	
+
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -175,4 +171,3 @@ text-align:center;
     -ms-user-select: none;
     user-select: none;
 }
-
