--- a/ui/components/NavigationMenu/NavigationMenu.scss
+++ b/ui/components/NavigationMenu/NavigationMenu.scss
@@ -6,7 +6,7 @@ $cool-green: #86d7a6;
     color: red;
     width: $main-navigation-width;
     height: $main-navigation-width;
-    background-color: black;
+    background-color: #181818;
     position: absolute;
     top: 20vh;
     left: calc(50vw - #{$main-navigation-width/2});
@@ -14,7 +14,7 @@ $cool-green: #86d7a6;
     //background: url('../../assets/images/my-face.png') no-repeat;
     background-size: contain;
     background-position: 50% 50%;
-    opacity: 0.75;
+    opacity: 0.9;
     transition: all 0.35s linear;
     background-clip: content-box;
     box-sizing:border-box;
