--- a/ui/components/SkillSet/SkillSet.scss
+++ b/ui/components/SkillSet/SkillSet.scss
@@ -3,15 +3,14 @@
 
 .skill-set{
   position: absolute;
-  margin-left: 20vw;
-  width:60vw;
+  margin-left: 17.5vw;
+  width:65vw;
   font-size: 15px;
   padding: 5px;
-  margin-top:65vh;
+  top:70vh;
   text-align: center;
   //border:3px solid rgba(24, 24, 24, .8);
   border-radius: 15px;
-
 }
 
 .skill{
